trying to implement color blindness test; stuck with picture layout issues

--- a/experiments/02_forced_choice/custom_styles.css
+++ b/experiments/02_forced_choice/custom_styles.css
@@ -6,6 +6,6 @@
 }
 .babe-view-picture {
     align-self: center;
-    height: auto;
-    width: 450px;
+    height: 220px;
+    max-width: 450px;
 }
